# tulip-integrations

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: splunk_demo.py
src/tulip_integrations/: __init__.py
src/tulip_integrations/compute/: __init__.py  lambda_cloud.py  runpod.py
src/tulip_integrations/edr/: __init__.py  crowdstrike.py
src/tulip_integrations/identity/: __init__.py  auth0.py  entra.py  okta.py
src/tulip_integrations/notify/: __init__.py  slack.py
src/tulip_integrations/security/: __init__.py  playbooks.py  splunk.py  wiz.py
src/tulip_integrations/siem/: __init__.py  splunk.py
src/tulip_integrations/soar/: __init__.py  cortex_xsoar.py
src/tulip_integrations/threat_intel/: __init__.py  virustotal.py
src/tulip_integrations/vuln/: __init__.py  wiz.py
tests/: __init__.py  test_compute.py  test_context_providers.py  test_cortex_xsoar.py  test_entra.py  test_first_wave_providers.py  test_live_auth0.py  test_live_paths.py  test_live_virustotal.py  test_notify.py  test_splunk.py  test_wiz.py
